--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-typescript": "^1.0.0",
+    "swr": "^1.1.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "bart": "yarn build && yarn start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
