--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "monochat",
   "version": "0.1.0",
+  "license": "Mine",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -8,13 +9,15 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.0",
     "express": "^4.17.1",
+    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-typescript": "^1.0.0",
+    "styled-components": "^5.3.3",
     "swr": "^1.1.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
