Moved to Chakra Ui instead of CSS

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "license": "Mine",
   "dependencies": {
+    "@chakra-ui/react": "^1.7.3",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,6 +15,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.0",
     "express": "^4.17.1",
+    "framer-motion": "^4",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
