--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "styled-components": "^5.3.3",
     "swr": "^1.1.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "bart": "yarn build && yarn start",
