--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-scripts": "5.0.0",
     "react-typescript": "^1.0.0",
     "styled-components": "^5.3.3",
